--- a/index.css
+++ b/index.css
@@ -26,25 +26,15 @@ body {
     flex-wrap: wrap;
     text-decoration: none;
     text-align: center;
-    column-count: 2;
-}
-
-.container .left {
-    width: 35%;
-    float: left;
-}
-
-.container .right {
-    width: 35%;
-    float: right;
 }
 
 .section {
     margin-top: 100px;
     margin-bottom: 100px;
-    margin-top: calc(0.5vw + 2.5vw);
+    margin-top: calc(1.5vw + 2.5vw);
     margin-bottom: calc(0.5vw + 2.5vw);
     background-color: var(--main-secondary-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .section .skill-icons img {
@@ -57,6 +47,13 @@ body {
     filter: grayscale(100%);
 }
 
+.section img {
+    width: 100%;
+    max-width: calc(10.5vw + 10.5vh);
+    height: auto;
+    padding: 0px 10px;
+    padding: 0px calc(0.75vw + 0.75vh);
+}
 
 .section .skill-icons img:hover {
     -webkit-filter: grayscale(0%);
@@ -68,17 +65,35 @@ body {
 .container h2, h3 { color: var(--main-secondary-font-color); }
 .container h2 { font-size: calc(1.25vw + 1.25vh); }
 .container h3 { font-size: calc(0.75vw + 0.75vh); }
+.container p {  
+    font-size: calc(0.65vw + 0.65vh); 
+    word-wrap: break-word;
+    padding-left: 40ch;
+    padding-right: 40ch;
+}
+
+
+.container .item * {
+    text-decoration: none;
+}
+
+.container .item .link-button button {
+    margin: 20px 20px;
+    padding: 10px 10px;
+    background-color: var(--main-primary-font-color);
+    border: none;
+    border-radius: 5px;
+}
 
 .container .image-link {
     transition: transform .2s;
-    margin: 10px;
     margin: 0px;
 }
+
 
 .container .image-link a {
     color: var(--main-primary-font-color);
     padding: 20px 20px;
-    text-decoration: none;
     font-size: 30px;
     font-size: calc(1.0vw + 1.0vh);
     padding: calc(0.75vw + 0.75vh) calc(0.75vw + 0.75vh);
@@ -88,25 +103,66 @@ body {
     transform: scale(1.5);
 }
 
+.header-link {
+    background-color: var(--main-primary-font-color);
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: var(--main-primary-color);
+    cursor: pointer;
+    display: inline-block;
+    line-height: 20px;
+    list-style: none;
+    margin: 20px;
+    outline: none;
+    padding: 10px 16px;
+    padding: calc(0.35vw + 0.35vh) calc(0.65vw + 0.65vh);
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.header-link:hover, .header-link:focus {
+    background-color: var(--main-secondary-color);
+    color: var(--main-secondary-font-color);
+}
+
 @media (prefers-reduced-motion) {
     html {
         scroll-behavior: auto;
     }
 }
 
-/* 
-@media (max-width: 1000px) {
-    .container h1 {
-        font-size: 60px;
+@media (max-width: 1024px) {
+    #overview-section {
+        height: auto;
+        margin-top: 0px;
     }
-    .container h2 {
+    .container {
+        margin: 10px;
+    }
+    .container h1 {
         font-size: 48px;
     }
+    .container h2 {
+        font-size: 28px;
+    }
     .container h3 {
-        font-size: 30px;
+        font-size: 20px;
+    }
+    .container p {
+        font-size: 18px;
+        padding-left: 5ch;
+        padding-right: 5ch;
     }
     .container .image-link a {
         padding: 20px 20px;
         font-size: 30px;
     }
-} */
+
+} 
