--- a/index.css
+++ b/index.css
@@ -29,19 +29,14 @@ body {
 }
 
 .section {
-    margin-top: 100px;
-    margin-bottom: 100px;
     margin-top: calc(1.5vw + 2.5vw);
     margin-bottom: calc(0.5vw + 2.5vw);
     background-color: var(--main-secondary-color);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .section .skill-icons img {
     width: 100%;
     max-width: calc(2.5vw + 2.5vh);
-    height: auto;
-    padding: 0px 10px;
     padding: 0px calc(0.75vw + 0.75vh);
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
@@ -50,8 +45,6 @@ body {
 .section img {
     width: 100%;
     max-width: calc(10.5vw + 10.5vh);
-    height: auto;
-    padding: 0px 10px;
     padding: 0px calc(0.75vw + 0.75vh);
 }
 
@@ -72,29 +65,13 @@ body {
     padding-right: 40ch;
 }
 
-
-.container .item * {
-    text-decoration: none;
-}
-
-.container .item .link-button button {
-    margin: 20px 20px;
-    padding: 10px 10px;
-    background-color: var(--main-primary-font-color);
-    border: none;
-    border-radius: 5px;
-}
-
 .container .image-link {
     transition: transform .2s;
     margin: 0px;
 }
 
-
 .container .image-link a {
     color: var(--main-primary-font-color);
-    padding: 20px 20px;
-    font-size: 30px;
     font-size: calc(1.0vw + 1.0vh);
     padding: calc(0.75vw + 0.75vh) calc(0.75vw + 0.75vh);
 }
@@ -105,17 +82,16 @@ body {
 
 .header-link {
     background-color: var(--main-primary-font-color);
-    border-radius: 8px;
     border-style: none;
+    border-radius: 0.75ch;
     box-sizing: border-box;
     color: var(--main-primary-color);
+    font-size: calc(0.5vw + 0.5vh);
     cursor: pointer;
     display: inline-block;
-    line-height: 20px;
     list-style: none;
-    margin: 20px;
+    margin: calc(0.75vw + 0.75vh) calc(0.75vw + 0.75vh);
     outline: none;
-    padding: 10px 16px;
     padding: calc(0.35vw + 0.35vh) calc(0.65vw + 0.65vh);
     position: relative;
     text-align: center;
@@ -163,6 +139,16 @@ body {
     .container .image-link a {
         padding: 20px 20px;
         font-size: 30px;
+    }
+
+    .section .skill-icons img {
+        max-width: calc(3.5vw + 3.5vh);
+    }
+
+    .header-link {
+        margin: 15px;
+        padding: 10px 16px;
+        font-size: 14px;
     }
 
 } 
