--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ html, body {
 }
 
 .section-paragraph {
-    @apply text-secondary my-6 w-full max-w-3xl;
+    @apply text-secondary my-6 w-full max-w-3xl text-white;
 }
 
 .badge {
