--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ html, body {
 }
 
 .secondary-title {
-    @apply text-3xl font-bold;
+    @apply text-4xl font-bold;
 }
 
 .secondary-title::before {
@@ -34,7 +34,7 @@ html, body {
 }
 
 .section-paragraph {
-    @apply text-secondary my-6 w-full max-w-3xl text-white;
+    @apply text-secondary my-6 w-full max-w-full text-white text-xl;
 }
 
 .badge {
