--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 }
 
 .hero {
-    @apply container flex justify-between items-center mx-auto px-4 lg:px-24 w-full h-screen;
+    @apply container flex justify-between items-center mx-auto px-8 lg:px-24 w-full h-screen;
 }
 
 .hero-link {
@@ -30,7 +30,7 @@ body {
 }
 
 .hero-title {
-    @apply text-5xl md:text-6xl lg:text-7xl font-bold my-4;
+    @apply text-4xl md:text-6xl lg:text-7xl font-bold my-2;
 }
 
 .hero-social {
@@ -48,7 +48,7 @@ body {
 }
 
 .section-title {
-    @apply text-4xl md:text-5xl font-bold mb-6;
+    @apply text-4xl md:text-5xl font-bold px-1 mb-6;
 }
 
 .section-title::before {
@@ -57,17 +57,5 @@ body {
 }
 
 .section-paragraph {
-    @apply text-sm md:text-xl my-6 w-full max-w-full text-white;
-}
-
-.project-badge {
-    @apply inline-block px-3 py-1 text-sm font-bold text-white mr-2 mb-2;
-}
-
-.project-modal-content {
-    @apply grid grid-cols-1 md:grid-cols-2 gap-2 m-4 pb-8;
-}
-
-.skill-icon {
-    @apply grid grid-rows-1 justify-center items-center text-center;
+    @apply md:text-xl my-6 px-1 w-full max-w-full text-quaternary;
 }
