--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -66,3 +66,15 @@
         </div>
     </section>
 </section>
+
+<style>
+    .hero-social {
+      transition: all;
+      transition-duration: 250ms;
+      @apply text-white text-4xl;
+    }
+
+    .hero-social:hover {
+        transform: scale(1.15);
+    }
+</style>
