--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -13,6 +13,10 @@ import TypeScriptImage from '/assets/icons/typescript.svg'
 import PowerShellImage from '/assets/icons/powershell.svg'
 import MUIImage from '/assets/icons/mui.svg'
 import CSharpImage from "/assets/icons/csharp.svg"
+import DockerImage from "../assets/icons/docker.svg"
+import SqliteImage from "../assets/icons/sqlite.svg"
+import MSSQLImage from "../assets/icons/mssql.svg"
+import BashImage from "../assets/icons/bash.svg"
 
 import SkillIcon from "./SkillIcon.astro";
 ---
@@ -25,7 +29,7 @@ import SkillIcon from "./SkillIcon.astro";
         </p>
 
         <div class="grid grid-rows-1 gap-8 mt-6 border border-gray-800 rounded-3xl p-4 pt-12 pb-12">
-            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-8">
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-8">
                 <SkillIcon title="TypeScript" src={TypeScriptImage} />
                 <SkillIcon title="JavaScript" src={JavaScriptImage} />
                 <SkillIcon title="Node.js" src={NodeJSImage} />
@@ -40,6 +44,10 @@ import SkillIcon from "./SkillIcon.astro";
                 <SkillIcon title="MUI" src={MUIImage} />
                 <SkillIcon title="Git" src={GitImage} />
                 <SkillIcon title="GitHub" src={GitHubImage} />
+                <SkillIcon title="Docker" src={DockerImage} />
+                <SkillIcon title="Sqlite" src={SqliteImage} />
+                <SkillIcon title="MSSQL" src={MSSQLImage} />
+                <SkillIcon title="Bash" src={BashImage} />
             </div>
         </div>
 
