--- a/src/pages/project/[...slug].astro
+++ b/src/pages/project/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
 import ProjectLayout from '../../layouts/ProjectLayout.astro';
+import ProjectSkillList from '../../components/ProjectSkillList.astro';
 
 interface Props {
 	entry: CollectionEntry<'project'>;
@@ -23,9 +24,11 @@ const { Content } = await entry.render();
 <ProjectLayout>
 	<section class="section">
 		<section class="w-full">
-			<div class="border-b-4 border-secondary">
+			<div class="border-b-2 border-gray-800">
+				<a href="/project/"> Projects </a>
 				<h2 class="section-title">{entry.data.title}</h2>
-				<p class="max-w-xl text-lg">{entry.data.description}</p>
+				<ProjectSkillList skills={entry.data.skills}/>
+				<p class="max-w-4xl text-lg">{entry.data.description}</p>
 			</div>
 			<div class="content">
 				{entry.data.img && <img src={entry.data.img} alt={entry.data.img_alt || ''} />}
@@ -37,7 +40,7 @@ const { Content } = await entry.render();
 
 <style>
 	.content {
-		max-width: 85ch;
+		max-width: 75ch;
 		margin-inline: auto;
 	}
 
