--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -12,7 +12,7 @@ const { title, image, imageAlt, slug } = Astro.props;
   <div class="p-4">
     <div class="relative">
       <img class="rounded-3xl" src={image} alt={imageAlt} />
-      <h3 class="absolute text-4xl text-white top-5 left-5">{title}</h3>
+      <h3 class="bg-primary rounded-2xl p-3 absolute text-2xl text-white top-5 left-5">{title}</h3>
     </div>
   </div>
 </a>
