fixed build error with svg path

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -13,10 +13,10 @@ import TypeScriptImage from '/assets/icons/typescript.svg'
 import PowerShellImage from '/assets/icons/powershell.svg'
 import MUIImage from '/assets/icons/mui.svg'
 import CSharpImage from "/assets/icons/csharp.svg"
-import DockerImage from "../assets/icons/docker.svg"
-import SqliteImage from "../assets/icons/sqlite.svg"
-import MSSQLImage from "../assets/icons/mssql.svg"
-import BashImage from "../assets/icons/bash.svg"
+import DockerImage from "/assets/icons/docker.svg"
+import SqliteImage from "/assets/icons/sqlite.svg"
+import MSSQLImage from "/assets/icons/mssql.svg"
+import BashImage from "/assets/icons/bash.svg"
 
 import SkillIcon from "./SkillIcon.astro";
 ---
