updated nav and fixed back link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,22 +7,13 @@
         </div>
         <ol class="header-list">
             <li>
-                <a class="hover:text-secondary" href="#skills" title="Go to Skills">
+                <a class="hover:text-secondary" href="/#skills" title="Go to Skills">
                     Skills
                 </a>
             </li>
             <li>
-                <a class="hover:text-secondary" href="#projects" title="Go to projects">
+                <a class="hover:text-secondary" href="/#projects" title="Go to projects">
                     Projects
-                </a>
-            </li>
-            <li>
-                <a
-                    class="hover:text-secondary"
-                    href="https://notes.jamesdurban.com"
-                    title="Go to my Digital Garden"
-                >
-                    Digital Garden
                 </a>
             </li>
         </ol>
