--- a/src/pages/project/[...slug].astro
+++ b/src/pages/project/[...slug].astro
@@ -25,8 +25,8 @@ const { Content } = await entry.render();
 	<section class="section">
 		<section class="w-full">
 			<div class="border-b-2 border-gray-800">
-				<a href="/project/"> Projects </a>
-				<h2 class="section-title">{entry.data.title}</h2>
+				<a href="/project/" class="text-lg underline"> <i class="fa-solid fa-arrow-left"/>{" "}Projects </a>
+				<h2 class="text-4xl md:text-5xl font-bold px-1 mt-2 mb-6;">{entry.data.title}</h2>
 				<ProjectSkillList skills={entry.data.skills}/>
 				<p class="max-w-4xl text-lg">{entry.data.description}</p>
 			</div>
@@ -40,7 +40,7 @@ const { Content } = await entry.render();
 
 <style>
 	.content {
-		max-width: 75ch;
+		max-width: 70ch;
 		margin-inline: auto;
 	}
 
