--- a/src/components/ProjectSkillList.astro
+++ b/src/components/ProjectSkillList.astro
@@ -5,7 +5,7 @@ interface Props {
 
 const { skills } = Astro.props
 ---
-<div class="pb-4">
+<div class="pt-4 pb-2">
     {skills.map(skill => 
         <span class="inline-block bg-secondary rounded px-3 py-1 text-sm font-bold text-primary mr-2 mb-2">
           {skill}
