updated visuals slightly

--- a/src/components/ProjectSkillList.astro
+++ b/src/components/ProjectSkillList.astro
@@ -7,7 +7,7 @@ const { skills } = Astro.props
 ---
 <div class="pt-4 pb-2">
     {skills.map(skill => 
-        <span class="inline-block bg-secondary rounded px-3 py-1 text-sm font-bold text-primary mr-2 mb-2">
+        <span class="inline-block bg-secondary rounded px-3 py-1 text-sm md:text-lg font-bold text-primary mr-2 mb-2">
           {skill}
         </span>
     )}
