--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,6 +11,8 @@ const { title = "James Durban" } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&amp;display=swap" rel="stylesheet">
 		<link
 			rel="stylesheet"
@@ -19,6 +21,7 @@ const { title = "James Durban" } = Astro.props;
 			crossorigin="anonymous"
 			referrerPolicy="no-referrer"
 		/>
+		
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
