--- a/src/components/SkillIcon.astro
+++ b/src/components/SkillIcon.astro
@@ -6,7 +6,7 @@ interface Props {
 
 const { title, src } = Astro.props
 ---
-<div class="grid grid-rows-1 justify-center items-center text-center">
+<div class="grid grid-rows-1 justify-center items-center text-center gap-4">
     <img title={title} alt={title} width="125" height="125" src={src} />
-    <h1 class="font-bold text-2xl">{title}</h1>
+    <h1 class="mt-2 mb-2 text-2xl">{title}</h1>
 </div>
