lots of changes this time to minor things

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -3,20 +3,28 @@ interface Props {
   title: string;
   image: string;
   imageAlt: string;
-  slug: string
+  slug: string;
 }
 
 const { title, image, imageAlt, slug } = Astro.props;
 ---
+
 <a class="project-card" href={`/project/${slug}`}>
-  <div class="p-4">
+  <div class="pt-2 pb-2">
     <div class="relative">
-      <img class="rounded-3xl" src={image} alt={imageAlt} />
-      <h3 class="bg-primary rounded-2xl p-3 absolute text-2xl text-white top-5 left-5">{title}</h3>
+      <img
+        class="object-center aspect-[7/4] rounded-3xl"
+        src={image}
+        alt={imageAlt}
+      />
+      <h3
+        class="bg-primary rounded-2xl p-3 absolute text-2xl text-white top-5 left-5"
+      >
+        {title}
+      </h3>
     </div>
   </div>
 </a>
-
 
 <style>
   .project-card {
