--- a/src/components/ProjectSkillList.astro
+++ b/src/components/ProjectSkillList.astro
@@ -3,12 +3,15 @@ interface Props {
   skills: string[];
 }
 
-const { skills } = Astro.props
+const { skills } = Astro.props;
 ---
+
 <div class="pt-4 pb-2">
-    {skills.map(skill => 
-        <span class="inline-block bg-secondary rounded px-3 py-1 text-sm md:text-lg font-bold text-primary mr-2 mb-2">
-          {skill}
-        </span>
-    )}
+  {
+    skills.map((skill) => (
+      <span class="inline-block bg-secondary rounded px-3 py-1 text-sm md:text-lg font-bold text-primary mr-2 mb-2">
+        {skill}
+      </span>
+    ))
+  }
 </div>
