--- a/src/components/SkillIcon.astro
+++ b/src/components/SkillIcon.astro
@@ -1,12 +1,13 @@
 ---
 interface Props {
-    src: string
-    title: string
+  src: string;
+  title: string;
 }
 
-const { title, src } = Astro.props
+const { title, src } = Astro.props;
 ---
+
 <div class="grid grid-rows-1 justify-center items-center text-center gap-4">
-    <img title={title} alt={title} width="125" height="125" src={src} />
-    <h1 class="mt-2 mb-2 text-2xl">{title}</h1>
+  <img title={title} alt={title} width="125" height="125" src={src} />
+  <h1 class="mt-2 mb-2 text-2xl">{title}</h1>
 </div>
