--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,13 @@
 ---
-const year = new Date().getFullYear();
+const date = new Date();
+const year = date.getFullYear();
+
+const lastEdited = date.toLocaleTimeString("en-US", {
+  month: "short",
+  day: "2-digit",
+  hour: "2-digit",
+  minute: "2-digit",
+});
 ---
 
 <footer class="text-center text-white">
@@ -47,13 +55,21 @@ const year = new Date().getFullYear();
       <i class="fa-solid fa-square-envelope fa-lg"></i>
     </a>
   </div>
-  <div class="text-center text-white p-4 text-xs md:text-sm lg:text-lg">
+  <div class="text-center text-white p-1 text-xs md:text-sm lg:text-lg">
     © {year} Copyright:<a href="https://jamesdurban.com/"> James Durban</a>
+  </div>
+
+  <div class="text-center text-white p-1 text-xs md:text-sm lg:text-lg">
+    Website Last Edited: {lastEdited}
   </div>
 </footer>
 
 <style>
   .footer-social {
     @apply text-white text-2xl m-4;
+  }
+
+  .footer-social:hover {
+    @apply text-secondary;
   }
 </style>
