--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,27 +1,31 @@
 ---
-import { getCollection } from 'astro:content'
-import ProjectCard from "./ProjectCard.astro"
+import { getCollection } from "astro:content";
+import ProjectCard from "./ProjectCard.astro";
 
-const projects = (await getCollection('project'))
-	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-	.slice(0, 4);
+const projects = (await getCollection("project"))
+  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+  .slice(0, 4);
 ---
+
 <section id="projects" class="section justify-between">
-    <section class="w-full">
-        <h2 class="section-title">Projects</h2>
-        <p class="section-paragraph">
-            I have built many projects during my professional and hobbyist time as a software engineer ranging
-            from fullstack bespoke web applications to low level mathematical libraries.
-        </p>
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mt-6">
-            {projects.map(project => 
-                <ProjectCard 
-                    title={project.data.title} 
-                    image={project.data.img} 
-                    imageAlt={project.data.img_alt} 
-                    slug={project.slug}
-                />
-            )}
-        </div>
-    </section>
+  <section class="w-full">
+    <h2 class="section-title">Projects</h2>
+    <p class="section-paragraph">
+      I have built many projects during my professional and hobbyist time as a
+      software engineer ranging from fullstack bespoke web applications to low
+      level mathematical libraries.
+    </p>
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mt-6">
+      {
+        projects.map((project) => (
+          <ProjectCard
+            title={project.data.title}
+            image={project.data.img}
+            imageAlt={project.data.img_alt}
+            slug={project.slug}
+          />
+        ))
+      }
+    </div>
+  </section>
 </section>
