--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,18 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import Header from "../components/Header.astro"
-import Hero from "../components/Hero.astro"
-import Skills from "../components/Skills.astro"
-import Projects from "../components/Projects.astro"
-import Footer from "../components/Footer.astro"
-
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import Hero from "../components/Hero.astro";
+import Skills from "../components/Skills.astro";
+import Projects from "../components/Projects.astro";
+import Footer from "../components/Footer.astro";
 ---
+
 <Layout>
-	<Header />
-	<main>
-		<Hero />
-        <Skills />
-        <Projects />
-	</main>
-	<Footer />
+  <Header />
+  <main>
+    <Hero />
+    <Skills />
+    <Projects />
+  </main>
+  <Footer />
 </Layout>
