--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,20 +8,8 @@ body {
   @apply bg-primary text-white font-poppins;
 }
 
-.hero {
-  @apply container flex justify-between items-center mx-auto px-8 lg:px-24 w-full h-screen;
-}
-
-.hero-link {
-  @apply m-5 text-4xl hover:text-secondary;
-}
-
-.hero-title {
-  @apply text-4xl md:text-6xl lg:text-7xl font-bold my-2;
-}
-
 .section {
-  @apply container p-28 mb-12 flex items-center mx-auto px-4 lg:px-24 w-full;
+  @apply container p-28 flex items-center mx-auto px-4 lg:px-24 w-full;
 }
 
 .section-title {
@@ -34,5 +22,5 @@ body {
 }
 
 .section-paragraph {
-  @apply md:text-xl my-6 px-1 w-full max-w-full text-quaternary;
+  @apply md:text-2xl my-6 px-1 w-full max-w-full text-quaternary;
 }
