added 404 page and minor updates

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -49,7 +49,7 @@
           <i class="fa-brands fa-gitlab fa-lg"></i>
         </a>
         <a
-          id="Email Footer Link"
+          id="Email Hero Link"
           class="hero-social"
           title="Email"
           aria-label="Email"
