--- a/src/components/SkillIcon.astro
+++ b/src/components/SkillIcon.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 interface Props {
   src: string;
   title: string;
@@ -8,6 +9,6 @@ const { title, src } = Astro.props;
 ---
 
 <div class="grid grid-rows-1 justify-center items-center text-center gap-4">
-  <img title={title} alt={title} width="125" height="125" src={src} />
+  <Image title={title} alt={title} width="125" height="125" src={src} />
   <h1 class="mt-2 mb-2 text-2xl">{title}</h1>
 </div>
