--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,23 +1,4 @@
 ---
-import ReactImage from "/assets/icons/react.svg";
-import CPPImage from "/assets/icons/cpp.svg";
-import CSS3Image from "/assets/icons/css3.svg";
-import GitImage from "/assets/icons/git.svg";
-import GitHubImage from "/assets/icons/github.svg";
-import HTML5Image from "/assets/icons/html5.svg";
-import JavaScriptImage from "/assets/icons/javascript.svg";
-import NodeJSImage from "/assets/icons/nodejs.svg";
-import PythonImage from "/assets/icons/python.svg";
-import RustImage from "/assets/icons/rust.svg";
-import TypeScriptImage from "/assets/icons/typescript.svg";
-import PowerShellImage from "/assets/icons/powershell.svg";
-import MUIImage from "/assets/icons/mui.svg";
-import CSharpImage from "/assets/icons/csharp.svg";
-import DockerImage from "/assets/icons/docker.svg";
-import SqliteImage from "/assets/icons/sqlite.svg";
-import MSSQLImage from "/assets/icons/mssql.svg";
-import BashImage from "/assets/icons/bash.svg";
-
 import SkillIcon from "./SkillIcon.astro";
 ---
 
@@ -36,24 +17,24 @@ import SkillIcon from "./SkillIcon.astro";
       <div
         class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-8"
       >
-        <SkillIcon title="TypeScript" src={TypeScriptImage} />
-        <SkillIcon title="JavaScript" src={JavaScriptImage} />
-        <SkillIcon title="React" src={ReactImage} />
-        <SkillIcon title="Node.js" src={NodeJSImage} />
-        <SkillIcon title="PowerShell" src={PowerShellImage} />
-        <SkillIcon title="CSS3" src={CSS3Image} />
-        <SkillIcon title="HTML5" src={HTML5Image} />
-        <SkillIcon title="C++" src={CPPImage} />
-        <SkillIcon title="Python" src={PythonImage} />
-        <SkillIcon title="Rust" src={RustImage} />
-        <SkillIcon title="C#" src={CSharpImage} />
-        <SkillIcon title="MUI" src={MUIImage} />
-        <SkillIcon title="Git" src={GitImage} />
-        <SkillIcon title="GitHub" src={GitHubImage} />
-        <SkillIcon title="Docker" src={DockerImage} />
-        <SkillIcon title="Sqlite" src={SqliteImage} />
-        <SkillIcon title="MSSQL" src={MSSQLImage} />
-        <SkillIcon title="Bash" src={BashImage} />
+        <SkillIcon title="TypeScript" src="/assets/icons/typescript.svg" />
+        <SkillIcon title="JavaScript" src="/assets/icons/javascript.svg" />
+        <SkillIcon title="React" src="/assets/icons/react.svg" />
+        <SkillIcon title="Node.js" src="/assets/icons/nodejs.svg" />
+        <SkillIcon title="PowerShell" src="/assets/icons/powershell.svg" />
+        <SkillIcon title="CSS3" src="/assets/icons/css3.svg" />
+        <SkillIcon title="HTML5" src="/assets/icons/html5.svg" />
+        <SkillIcon title="C++" src="/assets/icons/cpp.svg" />
+        <SkillIcon title="Python" src="/assets/icons/python.svg" />
+        <SkillIcon title="Rust" src="/assets/icons/rust.svg" />
+        <SkillIcon title="C#" src="/assets/icons/csharp.svg" />
+        <SkillIcon title="MUI" src="/assets/icons/mui.svg" />
+        <SkillIcon title="Git" src="/assets/icons/git.svg" />
+        <SkillIcon title="GitHub" src="/assets/icons/github.svg" />
+        <SkillIcon title="Docker" src="/assets/icons/docker.svg" />
+        <SkillIcon title="Sqlite" src="/assets/icons/sqlite.svg" />
+        <SkillIcon title="MSSQL" src="/assets/icons/mssql.svg" />
+        <SkillIcon title="Bash" src="/assets/icons/bash.svg" />
       </div>
     </div>
   </section>
